	accept in-line pars such as 'family' in the same way as text()
	does.  (PR#776)

    o	example(ask=TRUE) now applies to grid graphics (e.g. from
	lattice) as well as to base graphics. 

    o	xdg-open (the freedesktop.org interface to kfmclient/gnome-open/...)
	is now considered as a possible browser, after real browsers
	such as firefox, mozilla and opera.


DEPRECATED & DEFUNCT

    o	In package installation, SaveImage: yes is defunct and
	lazyloading is attempted instead.

    o	$ on an atomic vector or S4 object is now defunct.

    o	Partial matching in [[ is now only performed if explicitly
	requested (by exact=FALSE or exact=NA).

    o	Command-line completion has been moved from package 'rcompgen'
	to package 'utils': the former no longer exists as a separate
	package in the R distribution.

    o	The S4 pseudo-class "single" has been removed.
	["double" will follow shortly:  the S4 class for a REALSXP is
	"numeric".]

    o	Use of the graphics headers Rgraphics.h and Rdevices.h is
	deprecated, and these will be unavailable in R 2.8.0.
	(They are hardly used except in graphics devices, for which
	there is an updated API in this version of R.)


INSTALLATION

    o	Tcl/Tk >= 8.3 (released in 2000) is now required to build
	package tcltk.

    o	The Windows build only supports Windows 2000 or later (XP,
	Vista, Server 2003 and Server 2008).

    o	New option --enable-R-static-lib installs libR.a which can
	be linked to a front-end via 'R CMD config --ldflags'.
	The tests/Embedding examples now work with a static R
	library.

    o	Netscape (which was discontinued in Feb 2008) is no longer
	considered when selecting a browser.


UTILITIES

    o	Rdconv now removes empty sections including alias and keyword
    	entries, with a note.

    o	Keyword entries are no longer mandatory in Rd files.

    o	R CMD check now warns if spaces or non-ASCII characters are
	used in file paths, since these are not in general portable.
