@@ -147,11 +147,6 @@ static void X11_Line(double x1, double y1, double x2, double y2, pGEcontext gc, 
 static void X11_MetricInfo(int c, pGEcontext gc, double *ascent, double *descent, double *width, pDevDesc dd);
 static void X11_Mode(int mode, pDevDesc dd);
 static void X11_NewPage(pGEcontext gc, pDevDesc dd);
-/* declared in devX11.h
-Rboolean X11_Open(pDevDesc dd, pX11Desc xd,
-          char *dsp, double w, double h,
-          double gamma_fac, X_COLORTYPE colormodel,
-          int maxcube, int bgcolor, int canvascolor, int res); */
 static void X11_Polygon(int n, double *x, double *y, pGEcontext gc, pDevDesc dd);
 static void X11_Polyline(int n, double *x, double *y, pGEcontext gc, pDevDesc dd);
 static void X11_Rect(double x0, double y0, double x1, double y1, pGEcontext gc, pDevDesc dd);
@@ -165,15 +160,15 @@ static void X11_Text(double x, double y, const char *str, double rot, double had
 
 /* Support Routines */
 
-static void *RLoadFont(X11Desc *, char *, int, int);
+static void *RLoadFont(pX11Desc, char *, int, int);
 static double pixelHeight(void);
 static double pixelWidth(void);
-static int SetBaseFont(X11Desc *);
+static int SetBaseFont(pX11Desc);
 static void SetColor(int, pDevDesc);
 static void SetFont(pGEcontext, pDevDesc);
 static void SetLinetype(pGEcontext, pDevDesc);
 static void X11_Close_bitmap(pX11Desc xd);
-static char *translateFontFamily(char *family, X11Desc *xd);
+static char *translateFontFamily(char *family, pX11Desc xd);
 
 /************************/
 /* X11 Color Management */
@@ -931,13 +926,10 @@ static void *RLoadFont(pX11Desc xd, char *family, int face, int size)
     return tmp;
 }
 
-/* This should never be used for a Symbol face */
 static int SetBaseFont(pX11Desc xd)
 {
-    xd->fontface = xd->basefontface;
-    if (xd->fontface < 1 || xd->fontface > 5)
-        xd->fontface = 1;
-    xd->fontsize = xd->basefontsize;
+    xd->fontface = 1;
+    xd->fontsize = xd->pointsize;
     xd->usefixed = 0;
     xd->font = RLoadFont(xd, xd->fontfamily, xd->fontface, xd->fontsize);
     if (!xd->font)
@@ -1464,7 +1456,7 @@ static char *SaveFontSpec(SEXP sxp, int offset)
  * THEN return xd->basefontfamily (the family set up when the
  *   device was created)
  */
-static char *translateFontFamily(char *family, X11Desc *xd)
+static char *translateFontFamily(char *family, pX11Desc xd)
 {
     SEXP graphicsNS, x11env, fontdb, fontnames;
     int i, nfonts;
@@ -2234,40 +2226,44 @@ int Rf_setX11DeviceData(pDevDesc dd, double gamma_fac, pX11Desc xd)
 
     /* Nominal Character Sizes in Pixels */
 
+#if 0
     SetBaseFont(xd);
     {
-        XFontStruct *f;
+	XFontStruct *f;
 #ifdef USE_FONTSET
-        /* Use fudge size of M, not the max of the first font or the
-           whole fontset which may have very wide characters if it contains
-           a comprehensive ISO 10646 font.
-         */
-        if (xd->font->type == Font_Set)
-        {
-            char buf[10];
-            XRectangle ink, log;
+	/* Use fudge size of M, not the max of the first font or the
+	   whole fontset which may have very wide characters if it contains
+	   a comprehensive ISO 10646 font.
+	 */
+	if(xd->font->type == Font_Set) {
+	    char buf[10];
+	    XRectangle ink, log;
 
-            wcstombs(buf, L"M", 10);
+	    wcstombs(buf, L"M", 10);
 #ifdef HAVE_XUTF8TEXTEXTENTS
-            if (utf8locale)
-                Xutf8TextExtents(xd->font->fontset, buf, strlen(buf), &ink, &log);
-            else
+	    if(utf8locale)
+		Xutf8TextExtents(xd->font->fontset, buf, strlen(buf), &ink, &log);
+	    else
 #endif
-                XmbTextExtents(xd->font->fontset, buf, strlen(buf), &ink, &log);
-            dd->cra[0] = 2 + log.width;  /* fudge to allow some space */
-            dd->cra[1] = 2 + log.height; /* M has no descenders */
-        }
-        else
+		XmbTextExtents(xd->font->fontset, buf, strlen(buf), &ink, &log);
+	    dd->cra[0] = 2+log.width; /* fudge to allow some space */
+	    dd->cra[1] = 2+log.height;/* M has no descenders */
+	} else
 #endif
-        {
-            f = xd->font->font;
-            dd->cra[0] = f->max_bounds.rbearing - f->min_bounds.lbearing;
-            dd->cra[1] = f->max_bounds.ascent + f->max_bounds.descent;
-        }
+	{
+	    f = xd->font->font;
+	    dd->cra[0] = f->max_bounds.rbearing - f->min_bounds.lbearing;
+	    dd->cra[1] = f->max_bounds.ascent + f->max_bounds.descent;
+	}
 #ifdef DEBUG_X11
-        printf("cra = %f %f\n", dd->cra[0], dd->cra[1]);
+	printf("cra = %f %f\n", dd->cra[0], dd->cra[1]);
 #endif
     }
+#endif
+
+    /* Recommendation from 'R internals': changed for 2.7.0 */
+    dd->cra[0] = 0.9 * xd->pointsize;
+    dd->cra[1] = 1.2 * xd->pointsize;
 
     /* Character Addressing Offsets */
     /* These are used to plot a single plotting character */
@@ -2288,11 +2284,11 @@ int Rf_setX11DeviceData(pDevDesc dd, double gamma_fac, pX11Desc xd)
     dd->canHAdj = 0;
     dd->canChangeGamma = FALSE;
 
-    dd->startps = xd->basefontsize;
+    dd->startps = xd->pointsize;
     dd->startcol = xd->col;
     dd->startfill = xd->fill;
     dd->startlty = LTY_SOLID;
-    dd->startfont = xd->basefontface;
+    dd->startfont = 1;
     dd->startgamma = gamma_fac;
 
     /* initialise x11 device description */
@@ -2305,7 +2301,7 @@ int Rf_setX11DeviceData(pDevDesc dd, double gamma_fac, pX11Desc xd)
 
     dd->displayListOn = TRUE;
 
-    return (TRUE);
+    return TRUE;
 }
 
 /**
@@ -2315,7 +2311,7 @@ pX11Desc Rf_allocX11DeviceDesc(double ps)
 {
     pX11Desc xd;
     /* allocate new device description */
-    if (!(xd = (X11Desc *)calloc(1, sizeof(X11Desc))))
+    if (!(xd = (pX11Desc)calloc(1, sizeof(X11Desc))))
         return NULL;
 
     /* From here on, if we need to bail out with "error", */
@@ -2327,12 +2323,11 @@ pX11Desc Rf_allocX11DeviceDesc(double ps)
         ps = 12;
     xd->fontface = -1;
     xd->fontsize = -1;
-    xd->basefontface = 1;
-    xd->basefontsize = ps;
+    xd->pointsize = ps;
     xd->handleOwnEvents = FALSE;
     xd->window = (Window)NULL;
 
-    return (xd);
+    return xd;
 }
 
 static Rboolean in_R_GetX11Image(int d, void *pximage, int *pwidth, int *pheight)
